bindings/unity/Runtime/Native/xybrid.h

/*
 Opaque handle to a model loader.

 This handle is created by `xybrid_model_loader_from_registry`,
 `xybrid_model_loader_from_bundle`, or `xybrid_model_loader_from_directory`
 and must be freed with `xybrid_model_loader_free`.
 */
typedef struct XybridModelLoaderHandle {
  void *_0;
} XybridModelLoaderHandle;
/*
 Opaque handle to a loaded model.

 This handle is created by `xybrid_model_loader_load` and must be
 freed with `xybrid_model_free`.
 */
typedef struct XybridModelHandle {
  void *_0;
} XybridModelHandle;
/*
 Opaque handle to an envelope (input data).

 This handle is created by `xybrid_envelope_audio` or `xybrid_envelope_text`
 and must be freed with `xybrid_envelope_free`.
 */
typedef struct XybridEnvelopeHandle {
  void *_0;
} XybridEnvelopeHandle;
/*
 Opaque handle to a generation config.

 This handle is created by `xybrid_generation_config_new` (or a preset
 like `xybrid_generation_config_greedy`) and must be freed with
 `xybrid_generation_config_free`.
 */
typedef struct XybridGenerationConfigHandle {
  void *_0;
} XybridGenerationConfigHandle;
/*
 Opaque handle to an inference result.

 This handle is created by `xybrid_model_run` and must be freed with
 `xybrid_result_free`.
 */
typedef struct XybridResultHandle {
  void *_0;
} XybridResultHandle;
/*
 Opaque handle to a loaded bundle.

 This handle is created by `xybrid_bundle_open` and must be freed with
 `xybrid_bundle_free`.
 */
typedef struct XybridBundleHandle {
  void *_0;
} XybridBundleHandle;
/*
 Get the last error message.

 Returns a pointer to a null-terminated string containing the last error
 message, or null if no error has occurred. The returned pointer is valid
 until the next xybrid function call on the same thread.

 # Returns

 A pointer to the last error message, or null if no error.

 # Example (C)

 ```c
 XybridModelHandle* model = xybrid_model_loader_load(loader);
 if (model == NULL) {
     const char* error = xybrid_last_error();
     fprintf(stderr, "Failed to load: %s\n", error ? error : "unknown error");
 }
 ```
 */
const char *xybrid_last_error(void);
/*
 Free a string allocated by the library.

 This function should be called to free strings returned by xybrid functions
 that specify the caller must free the result. Do NOT use this to free
 strings returned by `xybrid_version()` or `xybrid_last_error()`.

 # Safety

 The pointer must be a valid pointer to a string allocated by xybrid,
 or null. Passing an invalid pointer causes undefined behavior.

 # Example (C)

 ```c
 char* model_id = xybrid_model_id(model);
 printf("Model: %s\n", model_id);
 xybrid_free_string(model_id);
 ```
 */
void xybrid_free_string(char *s);
/*
 Create a model loader from a registry model ID.

 This creates a loader that will fetch the model from the xybrid registry
 when `xybrid_model_loader_load` is called.

 # Parameters

 - `model_id`: A null-terminated string containing the model ID (e.g., "kokoro-82m").

 # Returns

 A handle to the model loader, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelLoaderHandle* loader = xybrid_model_loader_from_registry("kokoro-82m");
 if (loader == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use loader...
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelLoaderHandle *xybrid_model_loader_from_registry(const char *model_id);
/*
 Create a model loader from a local bundle path.

 This creates a loader that will load the model from the specified local path
 when `xybrid_model_loader_load` is called.

 # Parameters

 - `path`: A null-terminated string containing the path to the model bundle.

 # Returns

 A handle to the model loader, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelLoaderHandle* loader = xybrid_model_loader_from_bundle("/path/to/model");
 if (loader == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use loader...
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelLoaderHandle *xybrid_model_loader_from_bundle(const char *path);
/*
 Free a model loader handle.

 This function frees the memory associated with a model loader handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the model loader to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_model_loader_free(loader);
 loader = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_model_loader_free(struct XybridModelLoaderHandle *handle);
 if (envelope == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
/*
 Run inference on a model with the given input envelope.

 This function executes inference using the loaded model and returns
 a result handle containing the output or error information.

 # Parameters

 - `model`: A handle to the loaded model (from `xybrid_model_loader_load`).
 - `envelope`: A handle to the input envelope (from `xybrid_envelope_audio` or `xybrid_envelope_text`).

 # Returns

 A handle to the result, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.
 The envelope is NOT consumed - it can be reused for multiple inferences.

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 if (result == NULL) {
     fprintf(stderr, "Inference failed: %s\n", xybrid_last_error());
     return 1;
 }

 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     printf("Result: %s\n", text);
 } else {
     const char* error = xybrid_result_error(result);
     printf("Error: %s\n", error);
 }

 xybrid_result_free(result);
 ```
 */
struct XybridResultHandle *xybrid_model_run(struct XybridModelHandle *model,
                                            struct XybridEnvelopeHandle *envelope,
                                            struct XybridGenerationConfigHandle *config);
/*
 Check if the inference was successful.

 Returns 1 if the inference succeeded, 0 if it failed.
 If the handle is null or invalid, returns 0.

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 - `1` if success is true
 - `0` if success is false, or if the handle is null/invalid

 # Example (C)

 ```c
 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     printf("Result: %s\n", text);
 } else {
     const char* error = xybrid_result_error(result);
     printf("Error: %s\n", error ? error : "unknown");
 }
 ```
 */
int32_t xybrid_result_success(struct XybridResultHandle *result);
/*
 Get the text output from an inference result.

 Returns a pointer to a null-terminated string containing the text output,
 or null if the result does not contain text. The returned pointer is valid
 for the lifetime of the result handle - do NOT free it with xybrid_free_string().

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 A pointer to the text output string, or null if no text output.
 The pointer is valid until the result handle is freed.

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     if (text != NULL) {
         printf("Transcription: %s\n", text);
     }
 }
 xybrid_result_free(result);
 ```
 */
const char *xybrid_result_text(struct XybridResultHandle *result);
/*
 Get the latency in milliseconds from an inference result.

 Returns the inference latency in milliseconds.
 If the handle is null or invalid, returns 0.

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 The inference latency in milliseconds, or 0 if the handle is null/invalid.

 # Example (C)

 ```c
 uint32_t latency = xybrid_result_latency_ms(result);
 printf("Inference took %u ms\n", latency);
 ```
 */
uint32_t xybrid_result_latency_ms(struct XybridResultHandle *result);
/*
 Free an inference result handle.

 This function frees the memory associated with an inference result handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the result to free. May be null (no-op).

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 // ... use result ...
 xybrid_result_free(result);
 result = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_result_free(struct XybridResultHandle *handle);
/*
 Open a .xyb bundle file and return a handle.

 Loads the bundle into memory (decompresses zstd, parses tar, validates manifest).
 The returned handle can be used with other `xybrid_bundle_*` functions.

 # Parameters

 - `path`: Null-terminated UTF-8 path to the .xyb file.

 # Returns

 A handle to the opened bundle, or null on error (check `xybrid_last_error()`).

 # Example (C)

 ```c
 XybridBundleHandle* bundle = xybrid_bundle_open("/path/to/model.xyb");
 if (!bundle) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
 }
 ```
 */
struct XybridBundleHandle *xybrid_bundle_open(const char *path);
/*
 Get the manifest JSON from an opened bundle.

 Returns the full manifest as a JSON string. The manifest contains:
 `model_id`, `version`, `target`, `hash`, `files`, `has_metadata`.

 The returned string must be freed with `xybrid_free_string()`.

 # Parameters

 - `handle`: A handle to an opened bundle.

 # Returns

 A newly allocated null-terminated JSON string, or null on error.
 The caller must free the returned string with `xybrid_free_string()`.
 */
char *xybrid_bundle_manifest_json(struct XybridBundleHandle *handle);
/*
 Get the model_metadata.json content from an opened bundle.

 Returns the content of the `model_metadata.json` file inside the bundle,
 or null if the bundle does not contain one.

 The returned string must be freed with `xybrid_free_string()`.

 # Parameters

 - `handle`: A handle to an opened bundle.

 # Returns

 A newly allocated null-terminated JSON string, or null if not present or on error.
 Check `xybrid_last_error()` to distinguish "not present" (no error) from failure.
 */
char *xybrid_bundle_metadata_json(struct XybridBundleHandle *handle);
/*
 Extract all files from a bundle to a directory.

 Creates the output directory if it doesn't exist. Extracts all files
 from the bundle, preserving relative paths.

 # Parameters

 - `handle`: A handle to an opened bundle.
 - `output_dir`: Null-terminated UTF-8 path to the output directory.

 # Returns

 - `0` on success
 - Non-zero on failure (check `xybrid_last_error()`)
 */
int32_t xybrid_bundle_extract(struct XybridBundleHandle *handle, const char *output_dir);
/*
 Get the model ID from an opened bundle's manifest.

 The returned pointer uses thread-local storage and is valid until the next
 call to this function on the same thread. Do NOT free it.

 # Parameters

 - `handle`: A handle to an opened bundle.

 # Returns

 A pointer to the model ID string, or null on error.
 */
const char *xybrid_bundle_model_id(struct XybridBundleHandle *handle);
/*
 Get the version from an opened bundle's manifest.

 The returned pointer uses thread-local storage and is valid until the next
 call to this function on the same thread. Do NOT free it.
 */
const char *xybrid_bundle_version(struct XybridBundleHandle *handle);
/*
 Get the target platform from an opened bundle's manifest.

 The returned pointer uses thread-local storage and is valid until the next
 call to this function on the same thread. Do NOT free it.
 */
const char *xybrid_bundle_target(struct XybridBundleHandle *handle);
/*
 Get the SHA-256 hash from an opened bundle's manifest.

 The returned pointer uses thread-local storage and is valid until the next
 call to this function on the same thread. Do NOT free it.
 */
const char *xybrid_bundle_hash(struct XybridBundleHandle *handle);
/*
 Check if the bundle contains a model_metadata.json file.

 # Returns

 - `1` if the bundle has model_metadata.json
 - `0` if not, or if the handle is null/invalid
 */
int32_t xybrid_bundle_has_metadata(struct XybridBundleHandle *handle);
/*
 Get the number of files in the bundle.

 # Returns

 The file count, or 0 if the handle is null/invalid.
 */
uint32_t xybrid_bundle_file_count(struct XybridBundleHandle *handle);
/*
 Get the filename at a given index in the bundle's file list.

 The returned pointer uses thread-local storage and is valid until the next
 call to this function on the same thread. Do NOT free it.

 # Parameters

 - `handle`: A handle to an opened bundle.
 - `index`: Zero-based index into the file list.

 # Returns

 A pointer to the filename string, or null if index is out of bounds.
 */
const char *xybrid_bundle_file_name(struct XybridBundleHandle *handle, uint32_t index);
/*
 Free a bundle handle.

 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the bundle to free. May be null (no-op).
 */
void xybrid_bundle_free(struct XybridBundleHandle *handle);